--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
 Package: gogarch
-Version: 0.7-0
+Version: 0.7-1
 Type: Package
 Title: Generalized Orthogonal GARCH (GO-GARCH) models
-Date: 2011-03-21
+Date: 2012-01-03
 Author: Bernhard Pfaff
 Maintainer: Bernhard Pfaff <bernhard@pfaffikus.de>
 Depends: R (>= 2.10.0), methods, stats, graphics, fGarch, fastICA
-Suggests: vars
-Description: Implementation of the GO-GARCH model class
+Description: Implementation of the GO-GARCH model class 
 License: GPL (>= 2)
 LazyLoad: yes
+Packaged: 2012-01-06 11:15:35 UTC; bp
 Repository: CRAN
-Repository/R-Forge/Project: gogarch
-Repository/R-Forge/Revision: 42
-Date/Publication: 2011-03-24 16:56:23
-Packaged: 2011-03-23 22:05:20 UTC; rforge
+Date/Publication: 2012-01-06 13:59:49
